--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -45,6 +45,8 @@
     <Compile Include="BankersAlgorithim\ResourceName.cs" />
     <Compile Include="BankersAlgorithim\SystemResource.cs" />
     <Compile Include="BankersAlgorithim\SystemResources.cs" />
+    <Compile Include="DiningPhilosophers\Philosopher.cs" />
+    <Compile Include="DiningPhilosophers\PhilosopherFork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemLog\ConsoleSystemLog.cs" />
     <Compile Include="SystemLog\ISystemLog.cs" />
