--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -47,6 +47,7 @@
     <Compile Include="BankersAlgorithim\SystemResources.cs" />
     <Compile Include="DiningPhilosophers\GreedyPhilosopher.cs" />
     <Compile Include="DiningPhilosophers\PhilosopherFork.cs" />
+    <Compile Include="DiningPhilosophers\WellManneredPhilosopher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemLog\ConsoleSystemLog.cs" />
     <Compile Include="SystemLog\ISystemLog.cs" />
