--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -46,7 +46,7 @@
     <Compile Include="BankersAlgorithim\SystemResource.cs" />
     <Compile Include="BankersAlgorithim\SystemResources.cs" />
     <Compile Include="DiningPhilosophers\Philosopher.cs" />
-    <Compile Include="DiningPhilosophers\PhilosopherTable.cs" />
+    <Compile Include="DiningPhilosophers\Butler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimulationLog.cs" />
     <Compile Include="SystemLog\ConsoleSystemLog.cs" />
