--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -45,6 +45,9 @@
     <Compile Include="BankersAlgorithim\ResourceName.cs" />
     <Compile Include="BankersAlgorithim\SystemResource.cs" />
     <Compile Include="BankersAlgorithim\SystemResources.cs" />
+    <Compile Include="BplusTreeDataStructure\BplusTree.cs" />
+    <Compile Include="BplusTreeDataStructure\DataPage.cs" />
+    <Compile Include="BplusTreeDataStructure\Maybe.cs" />
     <Compile Include="DiningPhilosophers\Philosopher.cs" />
     <Compile Include="DiningPhilosophers\Butler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
