--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -47,6 +47,7 @@
     <Compile Include="BankersAlgorithim\SystemResources.cs" />
     <Compile Include="BplusTreeDataStructure\BplusTree.cs" />
     <Compile Include="BplusTreeDataStructure\CustomerRecord.cs" />
+    <Compile Include="BplusTreeDataStructure\DataPage.cs" />
     <Compile Include="BplusTreeDataStructure\Maybe.cs" />
     <Compile Include="DiningPhilosophers\Philosopher.cs" />
     <Compile Include="DiningPhilosophers\Butler.cs" />
