Split classes into files

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -48,6 +48,8 @@
     <Compile Include="BplusTreeDataStructure\BplusTree.cs" />
     <Compile Include="BplusTreeDataStructure\CustomerRecord.cs" />
     <Compile Include="BplusTreeDataStructure\DataPage.cs" />
+    <Compile Include="BplusTreeDataStructure\IndexPage.cs" />
+    <Compile Include="BplusTreeDataStructure\InsertResult.cs" />
     <Compile Include="BplusTreeDataStructure\Maybe.cs" />
     <Compile Include="DiningPhilosophers\Philosopher.cs" />
     <Compile Include="DiningPhilosophers\Butler.cs" />
