--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -50,6 +50,7 @@
     <Compile Include="BplusTreeDataStructure\DataPage.cs" />
     <Compile Include="BplusTreeDataStructure\IndexPage.cs" />
     <Compile Include="BplusTreeDataStructure\InsertResult.cs" />
+    <Compile Include="BplusTreeDataStructure\IPage.cs" />
     <Compile Include="BplusTreeDataStructure\Maybe.cs" />
     <Compile Include="DiningPhilosophers\Philosopher.cs" />
     <Compile Include="DiningPhilosophers\Butler.cs" />
