Refactored split flag.

--- a/src/Console/Console.csproj
+++ b/src/Console/Console.csproj
@@ -49,9 +49,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DiningPhilosophers\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
       <Project>{d2e56704-c3af-489c-93f9-a2215e76ac7a}</Project>
