--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -47,6 +47,8 @@
     <Compile Include="BankersAlgorithim\SystemResources.cs" />
     <Compile Include="DiningPhilosophers\Philosopher.cs" />
     <Compile Include="DiningPhilosophers\Butler.cs" />
+    <Compile Include="GameOfLife\GameOfLifeGrid.cs" />
+    <Compile Include="GameOfLife\GameOfLifeLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimulationLog.cs" />
     <Compile Include="SystemLog\ConsoleSystemLog.cs" />
