--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="BankersAlgorithim\SystemResourcesTests.cs" />
     <Compile Include="DiningPhilosophers\PhilosopherTableTests.cs" />
+    <Compile Include="GameOfLife\GameOfLifeGridTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemLog\SystemLogSpy.cs" />
   </ItemGroup>
@@ -72,6 +73,8 @@
       <Name>Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
