Added string seriealization

--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="BankersAlgorithim\SystemResourcesTests.cs" />
     <Compile Include="BplusTreeDataStructure\BplusTreeTests.cs" />
+    <Compile Include="BplusTreeDataStructure\BplusTreeTwoCountTests.cs" />
     <Compile Include="DiningPhilosophers\PhilosopherTableTests.cs" />
     <Compile Include="GameOfLife\GameOfLifeGridTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
