--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -61,6 +61,7 @@
     <Compile Include="SystemLog\ConsoleSystemLog.cs" />
     <Compile Include="SystemLog\ISystemLog.cs" />
     <Compile Include="SystemLog\NoOpSystemLog.cs" />
+    <Compile Include="TicTacToe\TicTacToeGame.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
