--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemLog\SystemLogSpy.cs" />
     <Compile Include="TicTacToe\PlayerTests.cs" />
+    <Compile Include="TicTacToe\TieDetectorTests.cs" />
     <Compile Include="TicTacToe\WinDetectorTests.cs" />
     <Compile Include="TicTacToe\TicTacToeGameTests.cs" />
   </ItemGroup>
