--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="BplusTreeDataStructure\BplusTreeTwoCountTests.cs" />
     <Compile Include="DiningPhilosophers\PhilosopherTableTests.cs" />
     <Compile Include="GameOfLife\GameOfLifeGridTests.cs" />
+    <Compile Include="MyLinkedList\MyLinkedListTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemLog\SystemLogSpy.cs" />
     <Compile Include="TicTacToe\PlayerTests.cs" />
