--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="DiningPhilosophers\PhilosopherTableTests.cs" />
     <Compile Include="GameOfLife\GameOfLifeGridTests.cs" />
     <Compile Include="MyLinkedList\MyLinkedListTests.cs" />
+    <Compile Include="PeakFinding2d\PeakFinding2DTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemLog\SystemLogSpy.cs" />
     <Compile Include="TicTacToe\PlayerTests.cs" />
